# slimme_meter_scraper

./: .gitignore  main.py  pyproject.toml
src/slimmemeterdata/: __init__.py  comodities.py  slimmemeterlezer.py
