[tool.poetry]
name = "slimmemeterdata"
version = "0.1.0"
description = ""
authors = ["VincentFokker <vincent.fokker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.4.3"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
